<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7D99C"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLoginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#925624"
        android:textSize="50sp"
        android:fontFamily="casual"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp"
        />

    <EditText
        android:id="@+id/userNameLogInEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:hint="@string/username"
        android:fontFamily="casual"
        android:inputType="text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="273dp"
        />

    <EditText
        android:id="@+id/passwordLogInEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLogInEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:hint="@string/password"
        android:fontFamily="casual"
        android:inputType="textPassword"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="377dp"
        />

    <Button
        android:id="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLogInEditText"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/login"
        android:backgroundTint="@android:color/holo_green_dark"
        android:fontFamily="casual"
        android:textSize="32sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="486dp"
        />

    <Button
        android:id="@+id/SignUpbutton"
        android:layout_width="150dp"
        android:layout_height="75sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:fontFamily="casual"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>